--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "gatsby": "^5.14.1",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
